--- a/ScrapChests.csproj
+++ b/ScrapChests.csproj
@@ -31,7 +31,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup>
+  <PropertyGroup>
+	  <LangVersion>preview</LangVersion>
+  </PropertyGroup>
+	<ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>Libs\0Harmony.dll</HintPath>
     </Reference>
